--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           out the form below and we'll get back to you with news of what's going
           on, and what you can do to change it.
         </p>
-        <form action="" class="center">
+        <form action="">
           <label
             >Name<input
               id="name"
@@ -77,6 +77,7 @@
           <button type="submit">Submit</button>
         </form>
       </div>
+      <section id="contactBoard"></section>
     </main>
   </body>
 </html>
